--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,13 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-row>
+    <ion-col>
+        <h3>Películas Nuevas</h3>
+    </ion-col>
+</ion-row>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<app-slideshow-backdrop [peliculas] = "peliculasRecientes" >
+
+<app-slideshow-poster [peliculas] = "peliculasRecientes"></app-slideshow-poster>
+
+</app-slideshow-backdrop>
 </ion-content>
