--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,13 +1,28 @@
 <ion-content [fullscreen]="true">
-<ion-row>
-    <ion-col>
-        <h3>Películas Nuevas</h3>
-    </ion-col>
-</ion-row>
+<ion-grid fixed>
+    <ion-row>
+        <ion-col>
+            <h3>Películas Nuevas</h3>
+        </ion-col>
+    </ion-row>
+</ion-grid>
 
-<app-slideshow-backdrop [peliculas] = "peliculasRecientes" >
+<app-slideshow-backdrop [peliculas] = "peliculasRecientes" ></app-slideshow-backdrop>
 
+<ion-grid fixed>
+    <ion-row>
+        <ion-col>
+            <h3>Cartelera</h3>
+        </ion-col>
+    </ion-row>
+</ion-grid>
 <app-slideshow-poster [peliculas] = "peliculasRecientes"></app-slideshow-poster>
-
-</app-slideshow-backdrop>
+<ion-grid fixed>
+    <ion-row size="12">
+        <ion-col>
+            <h3>Populares</h3>
+        </ion-col>
+    </ion-row>
+</ion-grid>
+<app-slideshow-pares [peliculas] = "populares"></app-slideshow-pares>
 </ion-content>
