--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -24,5 +24,5 @@
         </ion-col>
     </ion-row>
 </ion-grid>
-<app-slideshow-pares [peliculas] = "populares"></app-slideshow-pares>
+<app-slideshow-pares [peliculas] = "populares" (CargarMas)="cargarMas()"></app-slideshow-pares>
 </ion-content>
