--- a/src/app/components/slideshow-pares/slideshow-pares.component.html
+++ b/src/app/components/slideshow-pares/slideshow-pares.component.html
@@ -1,15 +1,22 @@
-<swiper-container slides-per-view="3" space-Between="-20" speed="500" loop="true" css-mode="true">
+<swiper-container slides-per-view="3" space-Between="-20" speed="500" css-mode="true">
   <swiper-slide  *ngFor="let pares of peliculas | pares">
     <ion-row>
         <ion-col size="12"  *ngFor="let pelicula of pares">
-          <ion-card>
+          <ion-card (click)="VerDetalle(pelicula.id)"> 
             <img   [src]="trustedUrl(pelicula.poster_path | imagen)" alt="">  
           </ion-card>
         </ion-col>
-      
-
     </ion-row>
   </swiper-slide>
-      
+  <swiper-slide  class="slide-mas">
+    <ion-row>
+      <ion-col size="12" class="btn-mas" >
+        <ion-button (click)="onClick()" expand="" size="large" >
+          <ion-icon slot="icon-only" name="add"></ion-icon>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+    
+  </swiper-slide>
 
 </swiper-container>
