--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,48 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Buscar Película
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-toolbar>
+  <ion-searchbar placeholder="Buscar película"
+                 animated                 
+                 [value]="textoBuscar"
+                 debounce="700" 
+                 (ionInput)="buscar($event)"  ></ion-searchbar>
+</ion-toolbar>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-content [fullscreen]="true">
+  <ion-grid fixed  *ngIf="buscando">
+    <ion-row >
+      <ion-col class="ion-text-center">
+        <ion-spinner  name="crescent"></ion-spinner>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-list *ngIf="peliculas.length === 0">
+    <ion-list-header>
+      <ion-label>Ideas</ion-label>      
+    </ion-list-header>
+    <ion-item  *ngFor="let idea of ideas">
+      <ion-label (click)="myidea(idea)" color="primary">{{ idea }}</ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="6" *ngFor="let pelicula of peliculas"  (click)="VerDetalle(pelicula.id)">
+        <img [src]="trustedUrl(pelicula.poster_path | imagen)" alt="">
+        <ion-card-header>
+          <ion-card-subtitle>{{ pelicula.release_date }}</ion-card-subtitle>          
+        </ion-card-header>
+        <ion-card-content>
+          {{ pelicula.title }}
+        </ion-card-content>
+      </ion-col>      
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
