--- a/src/app/components/slideshow-pares/slideshow-pares.component.html
+++ b/src/app/components/slideshow-pares/slideshow-pares.component.html
@@ -2,7 +2,7 @@
   <swiper-slide  *ngFor="let pares of peliculas | pares">
     <ion-row>
         <ion-col size="12"  *ngFor="let pelicula of pares">
-          <ion-card (click)="VerDetalle(pelicula.id)"> 
+          <ion-card mode="md" (click)="VerDetalle(pelicula.id)"> 
             <img   [src]="trustedUrl(pelicula.poster_path | imagen)" alt="">  
           </ion-card>
         </ion-col>
